Code fix after review

--- a/index.html
+++ b/index.html
@@ -50,196 +50,211 @@
             <input type="text" placeholder="Добавить новый город">
             <button class="add-city-btn">&plus;</button>
         </section>
-
-        <section class="city-weather">
-            <ul class="property-list">
-                <li class="city-header">
-                    <h3>Moscow</h3>
-                    <span class="city-temp">5&deg;C</span>
-                    <img src="icons/cloudy.svg" 
-                        class="weather-icon" 
-                        alt="Иконка погоды"/>
-                    <button class="delete-city-btn">&times;</button>
+        <section class="city-weather-section">
+            <ul class="city-list">
+                <li>
+                    <section class="city-weather">
+                        <span class="city-header">
+                            <h3>Moscow</h3>
+                            <span class="city-temp">5&deg;C</span>
+                            <img src="icons/cloudy.svg" 
+                                class="weather-icon" 
+                                alt="Иконка погоды"/>
+                            <button class="delete-city-btn">&times;</button>
+                        </span>
+                        <ul class="property-list">
+                            <li class="weather-property">
+                                <p>Ветер</p>
+                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Облачность</p>
+                                <span>Broken clouds</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Давление</p>
+                                <span>1013 hpa</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Влажность</p>
+                                <span>52%</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Координаты</p>
+                                <span>[59.88, 30.42]</span>
+                            </li>
+                        </ul>
+                    </section>
                 </li>
-                <li class="weather-property">
-                    <p>Ветер</p>
-                    <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                <li>
+                    <section class="city-weather">
+                        <span class="city-header">
+                            <h3>Moscow</h3>
+                            <span class="city-temp">5&deg;C</span>
+                            <img src="icons/cloudy.svg" 
+                                class="weather-icon" 
+                                alt="Иконка погоды"/>
+                            <button class="delete-city-btn">&times;</button>
+                        </span>
+                        <ul class="property-list">
+                            <li class="weather-property">
+                                <p>Ветер</p>
+                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Облачность</p>
+                                <span>Broken clouds</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Давление</p>
+                                <span>1013 hpa</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Влажность</p>
+                                <span>52%</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Координаты</p>
+                                <span>[59.88, 30.42]</span>
+                            </li>
+                        </ul>
+                    </section>
                 </li>
-                <li class="weather-property">
-                    <p>Облачность</p>
-                    <span>Broken clouds</span>
+                <li>
+                    <section class="city-weather">
+                        <span class="city-header">
+                            <h3>Moscow</h3>
+                            <span class="city-temp">5&deg;C</span>
+                            <img src="icons/cloudy.svg" 
+                                class="weather-icon" 
+                                alt="Иконка погоды"/>
+                            <button class="delete-city-btn">&times;</button>
+                        </span>
+                        <ul class="property-list">
+                            <li class="weather-property">
+                                <p>Ветер</p>
+                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Облачность</p>
+                                <span>Broken clouds</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Давление</p>
+                                <span>1013 hpa</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Влажность</p>
+                                <span>52%</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Координаты</p>
+                                <span>[59.88, 30.42]</span>
+                            </li>
+                        </ul>
+                    </section>
                 </li>
-                <li class="weather-property">
-                    <p>Давление</p>
-                    <span>1013 hpa</span>
+                <li>
+                    <section class="city-weather">
+                        <span class="city-header">
+                            <h3>Moscow</h3>
+                            <span class="city-temp">5&deg;C</span>
+                            <img src="icons/cloudy.svg" 
+                                class="weather-icon" 
+                                alt="Иконка погоды"/>
+                            <button class="delete-city-btn">&times;</button>
+                        </span>
+                        <ul class="property-list">
+                            <li class="weather-property">
+                                <p>Ветер</p>
+                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Облачность</p>
+                                <span>Broken clouds</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Давление</p>
+                                <span>1013 hpa</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Влажность</p>
+                                <span>52%</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Координаты</p>
+                                <span>[59.88, 30.42]</span>
+                            </li>
+                        </ul>
+                    </section>
                 </li>
-                <li class="weather-property">
-                    <p>Влажность</p>
-                    <span>52%</span>
+                <li>
+                    <section class="city-weather">
+                        <span class="city-header">
+                            <h3>Moscow</h3>
+                            <span class="city-temp">5&deg;C</span>
+                            <img src="icons/cloudy.svg" 
+                                class="weather-icon" 
+                                alt="Иконка погоды"/>
+                            <button class="delete-city-btn">&times;</button>
+                        </span>
+                        <ul class="property-list">
+                            <li class="weather-property">
+                                <p>Ветер</p>
+                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Облачность</p>
+                                <span>Broken clouds</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Давление</p>
+                                <span>1013 hpa</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Влажность</p>
+                                <span>52%</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Координаты</p>
+                                <span>[59.88, 30.42]</span>
+                            </li>
+                        </ul>
+                    </section>
                 </li>
-                <li class="weather-property">
-                    <p>Координаты</p>
-                    <span>[59.88, 30.42]</span>
-                </li>
-            </ul>
-        </section>
-        <section class="city-weather">
-            <ul class="property-list">
-                <li class="city-header">
-                    <h3>Moscow</h3>
-                    <span class="city-temp">5&deg;C</span>
-                    <img src="icons/cloudy.svg" 
-                        class="weather-icon" 
-                        alt="Иконка погоды"/>
-                    <button class="delete-city-btn">&times;</button>
-                </li>
-                <li class="weather-property">
-                    <p>Ветер</p>
-                    <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                </li>
-                <li class="weather-property">
-                    <p>Облачность</p>
-                    <span>Broken clouds</span>
-                </li>
-                <li class="weather-property">
-                    <p>Давление</p>
-                    <span>1013 hpa</span>
-                </li>
-                <li class="weather-property">
-                    <p>Влажность</p>
-                    <span>52%</span>
-                </li>
-                <li class="weather-property">
-                    <p>Координаты</p>
-                    <span>[59.88, 30.42]</span>
-                </li>
-            </ul>
-        </section>
-        <section class="city-weather">
-            <ul class="property-list">
-                <li class="city-header">
-                    <h3>Moscow</h3>
-                    <span class="city-temp">5&deg;C</span>
-                    <img src="icons/cloudy.svg" 
-                        class="weather-icon" 
-                        alt="Иконка погоды"/>
-                    <button class="delete-city-btn">&times;</button>
-                </li>
-                <li class="weather-property">
-                    <p>Ветер</p>
-                    <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                </li>
-                <li class="weather-property">
-                    <p>Облачность</p>
-                    <span>Broken clouds</span>
-                </li>
-                <li class="weather-property">
-                    <p>Давление</p>
-                    <span>1013 hpa</span>
-                </li>
-                <li class="weather-property">
-                    <p>Влажность</p>
-                    <span>52%</span>
-                </li>
-                <li class="weather-property">
-                    <p>Координаты</p>
-                    <span>[59.88, 30.42]</span>
-                </li>
-            </ul>
-        </section>
-        <section class="city-weather">
-            <ul class="property-list">
-                <li class="city-header">
-                    <h3>Moscow</h3>
-                    <span class="city-temp">5&deg;C</span>
-                    <img src="icons/cloudy.svg" 
-                        class="weather-icon" 
-                        alt="Иконка погоды"/>
-                    <button class="delete-city-btn">&times;</button>
-                </li>
-                <li class="weather-property">
-                    <p>Ветер</p>
-                    <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                </li>
-                <li class="weather-property">
-                    <p>Облачность</p>
-                    <span>Broken clouds</span>
-                </li>
-                <li class="weather-property">
-                    <p>Давление</p>
-                    <span>1013 hpa</span>
-                </li>
-                <li class="weather-property">
-                    <p>Влажность</p>
-                    <span>52%</span>
-                </li>
-                <li class="weather-property">
-                    <p>Координаты</p>
-                    <span>[59.88, 30.42]</span>
-                </li>
-            </ul>
-        </section>
-        <section class="city-weather">
-            <ul class="property-list">
-                <li class="city-header">
-                    <h3>Moscow</h3>
-                    <span class="city-temp">5&deg;C</span>
-                    <img src="icons/cloudy.svg" 
-                        class="weather-icon" 
-                        alt="Иконка погоды"/>
-                    <button class="delete-city-btn">&times;</button>
-                </li>
-                <li class="weather-property">
-                    <p>Ветер</p>
-                    <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                </li>
-                <li class="weather-property">
-                    <p>Облачность</p>
-                    <span>Broken clouds</span>
-                </li>
-                <li class="weather-property">
-                    <p>Давление</p>
-                    <span>1013 hpa</span>
-                </li>
-                <li class="weather-property">
-                    <p>Влажность</p>
-                    <span>52%</span>
-                </li>
-                <li class="weather-property">
-                    <p>Координаты</p>
-                    <span>[59.88, 30.42]</span>
-                </li>
-            </ul>
-        </section>
-        <section class="city-weather">
-            <ul class="property-list">
-                <li class="city-header">
-                    <h3>Moscow</h3>
-                    <span class="city-temp">5&deg;C</span>
-                    <img src="icons/cloudy.svg" 
-                        class="weather-icon" 
-                        alt="Иконка погоды"/>
-                    <button class="delete-city-btn">&times;</button>
-                </li>
-                <li class="weather-property">
-                    <p>Ветер</p>
-                    <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                </li>
-                <li class="weather-property">
-                    <p>Облачность</p>
-                    <span>Broken clouds</span>
-                </li>
-                <li class="weather-property">
-                    <p>Давление</p>
-                    <span>1013 hpa</span>
-                </li>
-                <li class="weather-property">
-                    <p>Влажность</p>
-                    <span>52%</span>
-                </li>
-                <li class="weather-property">
-                    <p>Координаты</p>
-                    <span>[59.88, 30.42]</span>
+                <li>
+                    <section class="city-weather">
+                        <span class="city-header">
+                            <h3>Moscow</h3>
+                            <span class="city-temp">5&deg;C</span>
+                            <img src="icons/cloudy.svg" 
+                                class="weather-icon" 
+                                alt="Иконка погоды"/>
+                            <button class="delete-city-btn">&times;</button>
+                        </span>
+                        <ul class="property-list">
+                            <li class="weather-property">
+                                <p>Ветер</p>
+                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Облачность</p>
+                                <span>Broken clouds</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Давление</p>
+                                <span>1013 hpa</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Влажность</p>
+                                <span>52%</span>
+                            </li>
+                            <li class="weather-property">
+                                <p>Координаты</p>
+                                <span>[59.88, 30.42]</span>
+                            </li>
+                        </ul>
+                    </section>
                 </li>
             </ul>
         </section>
