--- a/index.html
+++ b/index.html
@@ -48,213 +48,201 @@
 
         <section class="add-city">
             <input type="text" placeholder="Добавить новый город">
-            <button class="add-city-btn">&plus;</button>
+            <button type="submit" class="add-city-btn">&plus;</button>
         </section>
         <section class="city-weather-section">
             <ul class="city-list">
-                <li>
-                    <section class="city-weather">
-                        <span class="city-header">
-                            <h3>Moscow</h3>
-                            <span class="city-temp">5&deg;C</span>
-                            <img src="icons/cloudy.svg" 
-                                class="weather-icon" 
-                                alt="Иконка погоды"/>
-                            <button class="delete-city-btn">&times;</button>
-                        </span>
-                        <ul class="property-list">
-                            <li class="weather-property">
-                                <p>Ветер</p>
-                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Облачность</p>
-                                <span>Broken clouds</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Давление</p>
-                                <span>1013 hpa</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Влажность</p>
-                                <span>52%</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Координаты</p>
-                                <span>[59.88, 30.42]</span>
-                            </li>
-                        </ul>
-                    </section>
+                <li class="city-weather">
+                    <span class="city-header">
+                        <h3>Moscow</h3>
+                        <span class="city-temp">5&deg;C</span>
+                        <img src="icons/cloudy.svg" 
+                            class="weather-icon" 
+                            alt="Иконка погоды"/>
+                        <button class="delete-city-btn">&times;</button>
+                    </span>
+                    <ul class="property-list">
+                        <li class="weather-property">
+                            <p>Ветер</p>
+                            <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Облачность</p>
+                            <span>Broken clouds</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Давление</p>
+                            <span>1013 hpa</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Влажность</p>
+                            <span>52%</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Координаты</p>
+                            <span>[59.88, 30.42]</span>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <section class="city-weather">
-                        <span class="city-header">
-                            <h3>Moscow</h3>
-                            <span class="city-temp">5&deg;C</span>
-                            <img src="icons/cloudy.svg" 
-                                class="weather-icon" 
-                                alt="Иконка погоды"/>
-                            <button class="delete-city-btn">&times;</button>
-                        </span>
-                        <ul class="property-list">
-                            <li class="weather-property">
-                                <p>Ветер</p>
-                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Облачность</p>
-                                <span>Broken clouds</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Давление</p>
-                                <span>1013 hpa</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Влажность</p>
-                                <span>52%</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Координаты</p>
-                                <span>[59.88, 30.42]</span>
-                            </li>
-                        </ul>
-                    </section>
+                <li class="city-weather">
+                    <span class="city-header">
+                        <h3>Moscow</h3>
+                        <span class="city-temp">5&deg;C</span>
+                        <img src="icons/cloudy.svg" 
+                            class="weather-icon" 
+                            alt="Иконка погоды"/>
+                        <button class="delete-city-btn">&times;</button>
+                    </span>
+                    <ul class="property-list">
+                        <li class="weather-property">
+                            <p>Ветер</p>
+                            <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Облачность</p>
+                            <span>Broken clouds</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Давление</p>
+                            <span>1013 hpa</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Влажность</p>
+                            <span>52%</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Координаты</p>
+                            <span>[59.88, 30.42]</span>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <section class="city-weather">
-                        <span class="city-header">
-                            <h3>Moscow</h3>
-                            <span class="city-temp">5&deg;C</span>
-                            <img src="icons/cloudy.svg" 
-                                class="weather-icon" 
-                                alt="Иконка погоды"/>
-                            <button class="delete-city-btn">&times;</button>
-                        </span>
-                        <ul class="property-list">
-                            <li class="weather-property">
-                                <p>Ветер</p>
-                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Облачность</p>
-                                <span>Broken clouds</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Давление</p>
-                                <span>1013 hpa</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Влажность</p>
-                                <span>52%</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Координаты</p>
-                                <span>[59.88, 30.42]</span>
-                            </li>
-                        </ul>
-                    </section>
+                <li class="city-weather">
+                    <span class="city-header">
+                        <h3>Moscow</h3>
+                        <span class="city-temp">5&deg;C</span>
+                        <img src="icons/cloudy.svg" 
+                            class="weather-icon" 
+                            alt="Иконка погоды"/>
+                        <button class="delete-city-btn">&times;</button>
+                    </span>
+                    <ul class="property-list">
+                        <li class="weather-property">
+                            <p>Ветер</p>
+                            <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Облачность</p>
+                            <span>Broken clouds</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Давление</p>
+                            <span>1013 hpa</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Влажность</p>
+                            <span>52%</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Координаты</p>
+                            <span>[59.88, 30.42]</span>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <section class="city-weather">
-                        <span class="city-header">
-                            <h3>Moscow</h3>
-                            <span class="city-temp">5&deg;C</span>
-                            <img src="icons/cloudy.svg" 
-                                class="weather-icon" 
-                                alt="Иконка погоды"/>
-                            <button class="delete-city-btn">&times;</button>
-                        </span>
-                        <ul class="property-list">
-                            <li class="weather-property">
-                                <p>Ветер</p>
-                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Облачность</p>
-                                <span>Broken clouds</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Давление</p>
-                                <span>1013 hpa</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Влажность</p>
-                                <span>52%</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Координаты</p>
-                                <span>[59.88, 30.42]</span>
-                            </li>
-                        </ul>
-                    </section>
+                <li class="city-weather">
+                    <span class="city-header">
+                        <h3>Moscow</h3>
+                        <span class="city-temp">5&deg;C</span>
+                        <img src="icons/cloudy.svg" 
+                            class="weather-icon" 
+                            alt="Иконка погоды"/>
+                        <button class="delete-city-btn">&times;</button>
+                    </span>
+                    <ul class="property-list">
+                        <li class="weather-property">
+                            <p>Ветер</p>
+                            <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Облачность</p>
+                            <span>Broken clouds</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Давление</p>
+                            <span>1013 hpa</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Влажность</p>
+                            <span>52%</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Координаты</p>
+                            <span>[59.88, 30.42]</span>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <section class="city-weather">
-                        <span class="city-header">
-                            <h3>Moscow</h3>
-                            <span class="city-temp">5&deg;C</span>
-                            <img src="icons/cloudy.svg" 
-                                class="weather-icon" 
-                                alt="Иконка погоды"/>
-                            <button class="delete-city-btn">&times;</button>
-                        </span>
-                        <ul class="property-list">
-                            <li class="weather-property">
-                                <p>Ветер</p>
-                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Облачность</p>
-                                <span>Broken clouds</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Давление</p>
-                                <span>1013 hpa</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Влажность</p>
-                                <span>52%</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Координаты</p>
-                                <span>[59.88, 30.42]</span>
-                            </li>
-                        </ul>
-                    </section>
+                <li class="city-weather">
+                    <span class="city-header">
+                        <h3>Moscow</h3>
+                        <span class="city-temp">5&deg;C</span>
+                        <img src="icons/cloudy.svg" 
+                            class="weather-icon" 
+                            alt="Иконка погоды"/>
+                        <button class="delete-city-btn">&times;</button>
+                    </span>
+                    <ul class="property-list">
+                        <li class="weather-property">
+                            <p>Ветер</p>
+                            <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Облачность</p>
+                            <span>Broken clouds</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Давление</p>
+                            <span>1013 hpa</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Влажность</p>
+                            <span>52%</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Координаты</p>
+                            <span>[59.88, 30.42]</span>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <section class="city-weather">
-                        <span class="city-header">
-                            <h3>Moscow</h3>
-                            <span class="city-temp">5&deg;C</span>
-                            <img src="icons/cloudy.svg" 
-                                class="weather-icon" 
-                                alt="Иконка погоды"/>
-                            <button class="delete-city-btn">&times;</button>
-                        </span>
-                        <ul class="property-list">
-                            <li class="weather-property">
-                                <p>Ветер</p>
-                                <span>Moderate breeze, 6.0 m/s, North-northwest</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Облачность</p>
-                                <span>Broken clouds</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Давление</p>
-                                <span>1013 hpa</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Влажность</p>
-                                <span>52%</span>
-                            </li>
-                            <li class="weather-property">
-                                <p>Координаты</p>
-                                <span>[59.88, 30.42]</span>
-                            </li>
-                        </ul>
-                    </section>
+                <li class="city-weather">
+                    <span class="city-header">
+                        <h3>Moscow</h3>
+                        <span class="city-temp">5&deg;C</span>
+                        <img src="icons/cloudy.svg" 
+                            class="weather-icon" 
+                            alt="Иконка погоды"/>
+                        <button class="delete-city-btn">&times;</button>
+                    </span>
+                    <ul class="property-list">
+                        <li class="weather-property">
+                            <p>Ветер</p>
+                            <span>Moderate breeze, 6.0 m/s, North-northwest</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Облачность</p>
+                            <span>Broken clouds</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Давление</p>
+                            <span>1013 hpa</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Влажность</p>
+                            <span>52%</span>
+                        </li>
+                        <li class="weather-property">
+                            <p>Координаты</p>
+                            <span>[59.88, 30.42]</span>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </section>
